--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Myshop</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
